# bmatcher

./: Cargo.toml  README.MD
.github/workflows/: rust.yml
bmatcher/: Cargo.toml  GRAMMA.MD
bmatcher-core/: Cargo.toml
bmatcher-core/benches/: matcher.rs
bmatcher-core/src/: atom.rs  error.rs  lib.rs  matcher.rs  pattern.rs  stack.rs  target.rs  target_pelite.rs
bmatcher-core/src/compiler/: error.rs  lexer.rs  mod.rs  optimizer.rs  parser.rs
bmatcher-proc/: Cargo.toml
bmatcher-proc/src/: lib.rs  macro_pattern.rs
bmatcher/src/: lib.rs
example/: Cargo.toml
example/src/: main.rs
