[package]
name = "bmatcher-core"
authors.workspace = true
version.workspace = true
edition.workspace = true
description.workspace = true
license-file.workspace = true

[lib]
bench = false

[dependencies]

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
rand = "0.8.5"

[[bench]]
name = "matcher"
harness = false
