[package]
name = "bmatcher-core"
version = "0.3.2"
authors.workspace = true
edition.workspace = true
description.workspace = true
license-file.workspace = true

[lib]
bench = false

[dependencies]
thiserror-no-std = "2.0.2"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
rand = "0.8.5"

[[bench]]
name = "matcher"
harness = false
