[package]
name = "bmatcher-proc"
version = "0.3.2"
authors.workspace = true
description.workspace = true
license-file.workspace = true
edition.workspace = true

[lib]
proc-macro = true

[dependencies]
bmatcher-core = { version = "=0.3.2", path = "../bmatcher-core" }
quote = "1"
proc-macro2 = "1.0"
syn = { version = "2.0", features = ["full"] }
