[package]
name = "bmatcher"
version = "0.3.1"
authors.workspace = true
edition.workspace = true
description.workspace = true
license-file.workspace = true
repository.workspace = true
readme = "../README.MD"

[dependencies]
bmatcher-core = { version = "=0.3.1", path = "../bmatcher-core" }
bmatcher-proc = { version = "=0.3.1", path = "../bmatcher-proc" }
