[package]
name = "bmatcher"
version = "0.3.3"
authors.workspace = true
edition.workspace = true
description.workspace = true
license-file.workspace = true
repository.workspace = true
readme = "../README.MD"

[dependencies]
bmatcher-core = { version = "=0.3.3", path = "../bmatcher-core" }
bmatcher-proc = { version = "=0.3.3", path = "../bmatcher-proc" }

[features]
default = []
pelite = ["bmatcher-core/pelite"]
